[project]
name = "comfyui-sdnq"
version = "1.4.01"
description = "ComfyUI custom node pack for loading SDNQ quantized models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = "enragedantelope"
[tool.comfy]
# Required for ComfyUI Registry publishing
# Get your publisher ID from https://comfyregistry.org
PublisherId = "enragedantelope"
DisplayName = "SDNQ Model Loader"
Icon = ""
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
keywords = [
    "comfyui",
    "sdnq",
    "quantization",
    "stable-diffusion",
    "diffusers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.36.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "accelerate>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/EnragedAntelope/comfyui-sdnq"
Repository = "https://github.com/EnragedAntelope/comfyui-sdnq"
Issues = "https://github.com/EnragedAntelope/comfyui-sdnq/issues"
"Pre-quantized Models" = "https://huggingface.co/collections/Disty0/sdnq"

[tool.setuptools]
packages = ["nodes", "core"]
