[project]
name = "comfyui-sdnq"
description = "ComfyUI custom node pack for loading SDNQ quantized models"
version = "1.4.03"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/EnragedAntelope/comfyui-sdnq"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "enragedantelope"
DisplayName = "SDNQ Model Loader"
Icon = ""
